:recycle: [Refactor]: 로직 수정